media/base/nzbget/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nzbget
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      deployment: nzbget
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        deployment: nzbget
    spec:
      containers:
        - imagePullPolicy: IfNotPresent
          image: nzbget
          name: nzbget
          ports:
            - containerPort: 6789
              protocol: TCP
              name: nzbget
          resources:
            requests:
              memory: 1024Mi
              cpu: 250m
            limits:
              memory: 2048Mi
              cpu: 2000m
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /config
              name: nzbget-config
            - mountPath: /downloads
              name: nzbget-downloads
            - mountPath: /downloads/local
              name: nzbget-tmp
        - name: nzbget-metrics
          image: nzbget-exporter
          imagePullPolicy: Always
          resources:
            limits:
              memory: "128Mi"
              cpu: "100m"
            requests:
              memory: "28Mi"
              cpu: "10m"
          ports:
            - containerPort: 9452
              name: metrics
              protocol: TCP
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
        - name: nzbget-config
          emptyDir: {}
        - name: nzbget-downloads
          persistentVolumeClaim:
            claimName: nzbget-downloads
        - name: nzbget-tmp
          emptyDir: {}
